update jwt layer
